error handler yamp fixes
